fix(ui): remove double right scrollbar and  fix some page height

--- a/gravitee-am-ui/src/app/domain/domain.component.scss
+++ b/gravitee-am-ui/src/app/domain/domain.component.scss
@@ -24,5 +24,5 @@ mat-card.domain-banner {
 }
 
 .domain-content {
-  height: calc(100vh - 68px);
+  height: calc(100vh - 70px);
 }
