--- a/gravitee-am-ui/src/app/domain/settings/flows/flows.component.scss
+++ b/gravitee-am-ui/src/app/domain/settings/flows/flows.component.scss
@@ -1,3 +1,3 @@
 gv-policy-studio {
-  --gv-policy-studio--h: calc(100vh - 100px);
+  --gv-policy-studio--h: calc(100vh - 110px);
 }
