--- a/gravitee-am-ui/src/app/domain/settings/settings.component.scss
+++ b/gravitee-am-ui/src/app/domain/settings/settings.component.scss
@@ -1,5 +1,5 @@
 .domain-settings-content {
-  height: calc(100vh - 68px);
+  height: calc(100vh - 70px);
   overflow: auto;
   width: 100%;
 }
