--- a/gravitee-am-ui/src/app/settings/domains/domains.component.scss
+++ b/gravitee-am-ui/src/app/settings/domains/domains.component.scss
@@ -1,5 +1,5 @@
 .domains-content {
-  height: calc(100vh - 68px);
+  height: calc(100vh - 70px);
 
   .domains-search {
     text-align: center;
